data/derived/sp14/progs/unify/prog3396.ml.out
Characters 11-18:
  extract 1 ("bobby" 2);;
             ^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
